@@ -1,7 +1,7 @@
 //
 // Logger.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/Logger.h#3 $
+// $Id: //poco/1.4/Foundation/include/Poco/Logger.h#4 $
 //
 // Library: Foundation
 // Package: Logging
@@ -340,6 +340,10 @@ public:
 		/// returns the result. To include a dollar sign in the result string,
 		/// specify two dollar signs ($$) in the format string.
 
+	static void formatDump(std::string& message, const void* buffer, std::size_t length);
+		/// Creates a hex-dump of the given buffer and appends it to the
+		/// given message string.
+		
 	static void setLevel(const std::string& name, int level);
 		/// Sets the given log level on all loggers that are
 		/// descendants of the Logger with the given name.
@@ -407,7 +411,6 @@ protected:
 	void log(const std::string& text, Message::Priority prio, const char* file, int line);
 
 	static std::string format(const std::string& fmt, int argc, std::string argv[]);
-	static void formatDump(std::string& message, const void* buffer, std::size_t length);
 	static Logger& parent(const std::string& name);
 	static void add(Logger* pLogger);
 	static Logger* find(const std::string& name);
